--- a/quote.css
+++ b/quote.css
@@ -1,7 +1,10 @@
+body{
+margin-left: 20%;
+margin-right: 20%;
+}
 div#main{
-  position:absolute;
-  width:600px;
-  margin:auto;
+  position:relative;
+  height:600px;
 }
 #text{
   position:absolute;
