--- a/quote.css
+++ b/quote.css
@@ -3,7 +3,8 @@
   top:20px;
   height:1200px;
   width:1200px;
-  margin:auto;
+  margin-left:20px;
+  margin-right:20px;
 }
 #text{
   position:absolute;
